@startuml

title __BEAN's Class Diagram__\n

  namespace com.ocnyang.cartlayoutdemo {
    namespace bean {
      class com.ocnyang.cartlayoutdemo.bean.GoodsBean {
          - goods_amount : int
          - goods_name : String
          - goods_price : double
          + getGoods_amount()
          + getGoods_name()
          + getGoods_price()
          + setGoods_amount()
          + setGoods_name()
          + setGoods_price()
      }
    }
  }
  

  namespace com.ocnyang.cartlayoutdemo {
    namespace bean {
      class com.ocnyang.cartlayoutdemo.bean.NormalBean {
          ~ markdownNumber : int
          + getMarkdownNumber()
          + setMarkdownNumber()
      }
    }
  }
  

  namespace com.ocnyang.cartlayoutdemo {
    namespace bean {
      class com.ocnyang.cartlayoutdemo.bean.ShopBean {
          ~ shop_name : String
          + getShop_name()
          + setShop_name()
      }
    }
  }
  

  com.ocnyang.cartlayoutdemo.bean.GoodsBean -up-|> com.ocnyang.cartlayout.bean.ChildItemBean
  com.ocnyang.cartlayoutdemo.bean.NormalBean -up-|> com.ocnyang.cartlayout.bean.CartItemBean
  com.ocnyang.cartlayoutdemo.bean.ShopBean -up-|> com.ocnyang.cartlayout.bean.GroupItemBean


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
